--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,20 @@ spring:
     hibernate:
       ddl-auto: update
     properties.hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
+  mail:
+    host: localhost
+    port: 1025
+    username: username
+    password: password
+
+    properties:
+      mail:
+        smtp:
+          ssl:
+            trust: "*"
+          auth: true
+          starttls:
+            enable: true
+          connectiontimeout: 5000
+          timeout: 3000
+          writetimeout: 5000
