--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,8 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: update
-    properties.hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
+    properties:
+      hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
   mail:
     host: localhost
     port: 1025
