--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 server.port=8080
 server.error.path=/error
 server.error.whitelabel.enabled=false
+server.servlet.session.persistent=true
